# python-wgpu-torch-playground

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: CI.yml
python/__tests__/: __init__.py
python/python_wgpu_torch_playground/: __init__.py  hello_compute.py  hello_compute.wgsl  shader.wgsl
python/python_wgpu_torch_playground/mine/: min_max.py
scripts/: x_build_py.py  x_ci.py  x_clear.py  x_dev_py.py  x_test.py
